# forsyde-shallow

./: .gitignore  .travis.yml  ForSyDe-Shallow.cabal  ForSyDe.cabal  Gemfile  INSTALL  LICENSE  README  README.md  Setup.hs  _config.yml  forsyde-shallow.cabal  index.md  stack-9.2.7.yaml
.github/workflows/: github-actions-demo.yml  github-actions-push-any.yml  github-actions-push-master.yml  github-actions-test-suite.yml
assets/: GettingStarted.hs
doc/EmbeddedvsTraditional/: EmbeddedvsTraditional.bib  EmbeddedvsTraditional.tex  Makefile
doc/VHDL/: vhdl93_syntax.html
doc/article/: Makefile  article.bib  article.tex
doc/article/figures/: Lava.graffle
doc/paper/: Makefile  paper.bib  paper.tex  ref_ingo.bib
doc/paper/1.Introduction/: Introduction.tex
doc/paper/2.TheProblem/: TheProblem.tex
doc/paper/3.TheIdea/: TheIdea.tex
doc/paper/figures/: ConcurrentProcesses.fig  ConcurrentProcesses.pdf_t  ProcessConstructor.fig  ProcessConstructor.pdf_t
doc/presentation/: presentation.tex
doc/presentation-April08/: presentation.tex
doc/presentation-April08/figures/: VHDL.graffle  attributes.graphml
doc/presentation-Aug08/: presentation.tex
doc/presentation-Aug08/figures/: tick.graffle
doc/presentation-Jan08/: presentation.tex
doc/presentation-Jan08/figures/: cross.graffle
doc/presentation-UPM-March08/: presentation.tex
doc/presentation-UPM-March08/figures/: ProcessConstructor.pdf_t
doc/presentation/figures/: ForSyDe.graffle
doc/report/: CC_Attribution-No_Derivative_Works_3.0.xmp  kth-mag.cls  nada-ex.sty  report.bib  report.tex
doc/report/1.Introduction/: Introduction.tex
doc/report/2.LavavsForSyDe/: LavavsForSyDe.tex
doc/report/3.CompilerDesign/: CompilerDesign.tex
doc/report/4.UsersGuide/: UsersGuide.tex
doc/report/5.ConclusionsFurtherWork/: ConclusionsFurtherWork.tex
doc/report/A.HackersGuide/: HackersGuide.tex
doc/report/B.Examples/: Examples.tex  Plus1.hs  plus1.vhd
doc/report/C.VHDLlib/: VHDLlib.tex
doc/report/I.Abstract/: Abstract.tex
doc/report/II.Acknowledgements/: Acknowledgements.tex
doc/report/III.Preface/: Preface.tex
doc/report/IV.Abbreviations/: Abbreviations.tex
doc/report/figures/: Block.fig  Block.pdf_t  Circuit.fig  Circuit.pdf_t  Complex.fig  Complex.pdf_t  ConcurrentProcesses.pdf_t  ForSyDe.graffle  Identity.fig  Identity.pdf_t  InPort.fig  InPort.pdf_t  Instance.fig  Instance.pdf_t  OutPort.fig  OutPort.pdf_t  Process.pdf_t  delaySY.pdf_t  graph.dot  graph.graffle  mapSY.pdf_t  plus1.fig  plus1.pdf_t  sourceSY.pdf_t
doc/tutorial/: Makefile  fptools.css  publish.sh  tutorial.xml
doc/tutorial/ForSyDe_tutorial_src/: AddFour.hs  Counter.hs  Plus1Shallow.hs
doc/tutorial/figures/: fullAdderMealy.graffle  fullAdderMoore.graffle
doc/tutorial/figures/VHDLTree.graffle/: data.plist  image1.tiff  image2.tiff
doc/tutorial/figures/encoder.graffle/: data.plist
doc/tutorial/files/: AddFour.hs  Encoder.hs  FullAdder.hs  Plus1.hs
doc/www/: Makefile  index.html  publications.html  publications_bib.html  style.css
doc/www/files/: ALU-graphml.tgz  ALU-vhdl.tgz  Equalizer.tgz
doc/www/files/Equalizer/: AudioFilter.lhs  ButtonControl.lhs  TestAnalyzer.lhs  TestDistortionControl.lhs  TestFIR.lhs
doc/www/files/tutorial/: ForSyDe_tutorial_src.tgz  apa.html  apas02.html  apas03.html  apas04.html  apas05.html  ar01s02.html  ar01s03.html  ar01s04.html  ar01s05.html  ar01s06.html  index.html  tutorial.html
examples/: ALU.hs  ALU_Shallow.hs  BitVector.hs  ButtonEncoder.hs  CarrySelectAdder.hs  Counter.hs  DeepShallow.hs  LFSR.hs  Multiplexer.hs  Multiplexer_FSVector.hs  Null.hs  ParAddFour.hs  SeqAddFour.hs  SimpleDES.hs  SimpleDES_HW.hs  ZipTwist.hs
examples/Equalizer/: AudioAnalyzer.lhs  AudioFilter.lhs  ButtonControl.lhs  DistortionControl.lhs  Equalizer.lhs  EqualizerTypes.lhs  Main.lhs
examples/Equalizer/Test/: AudioIn.mat
examples/Equalizer_Shallow/: AudioAnalyzer.lhs  ButtonControl.lhs  DistortionControl.lhs  Equalizer.lhs  EqualizerTypes.lhs  README  TestButtonControl.lhs  TestDFT.lhs  TestEqualizer.lhs  TestFilter.lhs
lib/: forsyde.vhd
pages/: getting_started.md  new_forsyde_shallow_project.md  setup.md
src/: ForSyDe.hs
src/Data/Traversable/: GenericZipWith.hs
src/Data/Typeable/: TypeRepLib.hs
src/ForSyDe/: AbsentExt.hs  Backend.hs  Bit.hs  Config.hs  DFT.hs  FIR.hs  ForSyDeErr.hs  ForSyDeErr.hs-boot  Ids.hs  Netlist.hs  Netlist.hs-boot  OSharing.hs  Process.hs  REMOVENetlist.hs-boot  Shallow.hs  Signal.hs  System.hs  Vector.hs
src/ForSyDe/Backend/: GraphML.hs  Ppr.hs  Simulate.hs  VHDL.hs
src/ForSyDe/Backend/GraphML/: AST.hs  FileIO.hs  Ppr.hs  Traverse.hs
src/ForSyDe/Backend/VHDL/: AST.hs  Constants.hs  FileIO.hs  Generate.hs  GlobalNameTable.hs  GlobalNameTable.hs-boot  Modelsim.hs  Ppr.hs  Quartus.hs  TestBench.hs  Translate.hs  Traverse.hs
src/ForSyDe/Netlist/: Traverse.hs
src/ForSyDe/OSharing/: UDynamic.hs
src/ForSyDe/Process/: ProcFun.hs  ProcFun.hs-boot  ProcType.hs  ProcVal.hs  SynchProc.hs
src/ForSyDe/Process/ProcType/: Instances.hs
src/ForSyDe/Shallow/: AbsentExt.hs  AdaptivityLib.hs  BitVector.hs  CTLib.hs  Core.hs  CoreLib.hs  DELib.hs  DFT.hs  DTLib.hs  DataflowLib.hs  DomainInterfaces.hs  FIR.hs  FilterLib.hs  Gaussian.hs  Memory.hs  MoC.hs  MoCInterfaces.hs  MoCLib.hs  PolyArith.hs  Queue.hs  SDFLib.hs  Signal.hs  StochasticLib.hs  SynchronousLib.hs  SynchronousProcessLib.hs  UntimedLib.hs  Utility.hs  UtilityLib.hs  Vector.hs
src/ForSyDe/Shallow/Core/: AbsentExt.hs  BitVector.hs  Matrix.hs  Signal.hs  Vector.hs
src/ForSyDe/Shallow/MoC/: Adaptivity.hs  CSDF.hs  CT.hs  DE.hs  DTLib.hs  Dataflow.hs  DomainInterface.hs  MoCInterface.hs  SADF.hs  SDF.hs  (+2 more)
src/ForSyDe/System/: Instantiate.hs  SysDef.hs  SysDef.hs-boot  SysFun.hs
src/HD/: Dyn.hs  HDFun.hs  HDSignal.hs  HDSynchronousLib.hs  Misc.hs  Netlist.hs  Port.hs  Ref.hs  Types.hs  VHDL.hs
src/HD/VHDL/: AST.hs  Ppr.hs
test/: Props.hs  Spec.hs  TestDocs.hs  Unit.hs
tests/: Install.hs  Main.hs
tests/properties/: Main.hs  Shallow.hs  VHDLBackend.hs
tests/properties/Shallow/: SynchronousMoC.hs
(+44 files in other folders)
