-- FIXME: add a license and CR holder for th-lift and lava
name:           ForSyDe
version:        0.1
cabal-version:  >= 1.2
build-type:     Custom
license:        BSD3
license-file:   LICENSE
copyright:      Copyright (c) 2003-2007 The ForSyDe Team
maintainer:     ecs_forsyde_development@ict.kth.se
homepage:       http://www.imit.kth.se/info/FOFU/ForSyDe/
stability:      alpha
-- package-url: not set yet
synopsis:       
 DSEL library implementing the ForSyDe system design methodology.
category:       DSEL
tested-with:    GHC==6.8.1
data-files:     lib/forsyde.vhd

Library
  build-depends:   type-level,
                   parameterized-data,
                   containers,
                   packedstring,
                   base, 
                   regex-posix, 
                   mtl, 
                   pretty, 
                   template-haskell > 2.0,
                   process,
                   directory,
                   filepath
  hs-source-dirs:  src, dist/build/autogen
  exposed-modules: Language.Haskell.TH.Lift,
                   Language.Haskell.TH.LiftInstances,
                   ForSyDe,
                   ForSyDe.Ids,
                   ForSyDe.System,
                   ForSyDe.AbsentExt,
                   ForSyDe.Bit,
                   ForSyDe.DFT,
                   ForSyDe.FIR,
                   ForSyDe.Signal,
                   ForSyDe.Process,
                   ForSyDe.Process.SynchProc,
                   ForSyDe.Backend,
                   ForSyDe.Backend.Simulate,
                   ForSyDe.Backend.VHDL,
                   ForSyDe.Backend.GraphML
  other-modules:   Paths_ForSyDe,
                   Language.Haskell.TH.TypeLib,
                   Data.Typeable.TypeRepLib,
                   Data.Traversable.GenericZipWith,
                   ForSyDe.Config,
                   ForSyDe.ForSyDeErr,
                   ForSyDe.Netlist,
                   ForSyDe.Netlist.Traverse,
                   ForSyDe.OSharing,
                   ForSyDe.OSharing.UDynamic,
                   ForSyDe.System.SysFun,
                   ForSyDe.System.SysFun.Instances,
                   ForSyDe.System.SysDef,
                   ForSyDe.System.Instantiate,
                   ForSyDe.Process.ProcFun,
                   ForSyDe.Process.ProcVal, 
                   ForSyDe.Process.ProcType,
                   ForSyDe.Process.ProcType.Instances,
                   ForSyDe.Backend.Ppr,
                   ForSyDe.Backend.VHDL.AST,
                   ForSyDe.Backend.VHDL.Ppr,
                   ForSyDe.Backend.VHDL.Constants,
                   ForSyDe.Backend.VHDL.FileIO,
                   ForSyDe.Backend.VHDL.Traverse,
                   ForSyDe.Backend.VHDL.Traverse.VHDLM,
                   ForSyDe.Backend.VHDL.Translate,
                   ForSyDe.Backend.VHDL.Generate,
                   ForSyDe.Backend.VHDL.TestBench,
                   ForSyDe.Backend.VHDL.Quartus,
                   ForSyDe.Backend.VHDL.Modelsim,
                   ForSyDe.Backend.GraphML.AST,
                   ForSyDe.Backend.GraphML.Ppr,
                   ForSyDe.Backend.GraphML.FileIO,
                   ForSyDe.Backend.GraphML.Traverse,
                   ForSyDe.Backend.GraphML.Traverse.GraphMLM


-- FIXME: remove all the -fno-warn*
  ghc-options:	-Wall -fno-warn-name-shadowing -fno-warn-orphans
