-- FIXME: add a license and CR holder for th-lift and lava
-- FIXME: Fix copyright header on all src files (date and owner, SAM group, KTH/ICT/ECS)
-- FIXME: Add header to files which don't have it
name:           ForSyDe
version:        3.0
cabal-version:  >= 1.2
build-type:     Custom
license:        BSD3
license-file:   LICENSE
copyright:      Copyright (c) 2003-2008 SAM group, KTH/ICT/ECS
maintainer:     ecs_forsyde_development@ict.kth.se
homepage:       http://www.ict.kth.se/org/ict/ecs/sam/projects/forsyde/www/
stability:      alpha
synopsis:       
 ForSyDe's Haskell-embedded Domain Specific Language.
description: 
 The ForSyDe (Formal System Design) methodology has been developed with the objective to move system design to a higher level of abstraction and to bridge the abstraction gap by transformational design refinement. 
 
 This library provides ForSyDe's implementation as a Haskell-embedded Domain Specific Language (DSL). For more information, please see ForSyDe's website: <http://www.ict.kth.se/org/ict/ecs/sam/projects/forsyde/www/>.
category:       Language
tested-with:    GHC==6.8.1, GHC==6.8.2
data-files:     lib/forsyde.vhd
extra-source-files: LICENSE,
                    examples/ALU.hs,
                    examples/ALU_Shallow.hs,
                    examples/ButtonEncoder.hs,
                    examples/CarrySelectAdder.hs,
                    examples/Counter.hs,
                    examples/DeepShallow.hs,
                    examples/LFSR.hs,
                    examples/Multiplexer.hs,
                    examples/Multiplexer_FSVector.hs,
                    examples/Null.hs,
                    examples/ParAddFour.hs,
                    examples/SeqAddFour.hs,
                    examples/ZipTwist.hs

Library
  build-depends:   type-level,
                   parameterized-data,
                   containers,
                   packedstring,
                   base, 
                   regex-posix, 
                   mtl, 
                   pretty, 
                   template-haskell > 2.0,
                   process,
                   directory,
                   filepath,
                   old-time,
                   random

  hs-source-dirs:  src, dist/build/autogen
  exposed-modules: Language.Haskell.TH.Lift,
                   Language.Haskell.TH.LiftInstances,
                   ForSyDe,
                   ForSyDe.Ids,
                   ForSyDe.System,
                   ForSyDe.AbsentExt,
                   ForSyDe.Bit,
                   ForSyDe.DFT,
                   ForSyDe.FIR,
                   ForSyDe.Signal,
                   ForSyDe.Process,
                   ForSyDe.Process.SynchProc,
                   ForSyDe.Backend,
                   ForSyDe.Backend.Simulate,
                   ForSyDe.Backend.VHDL,
                   ForSyDe.Backend.GraphML,
                   ForSyDe.Shallow,
                   ForSyDe.Shallow.AbsentExt,
                   ForSyDe.Shallow.MoCLib,
                   ForSyDe.Shallow.AdaptivityLib,
                   ForSyDe.Shallow.PolyArith,
                   ForSyDe.Shallow.BitVector,
                   ForSyDe.Shallow.Queue,
                   ForSyDe.Shallow.CTLib,
                   ForSyDe.Shallow.Signal,
                   ForSyDe.Shallow.CoreLib,
                   ForSyDe.Shallow.StochasticLib,
                   ForSyDe.Shallow.DFT,
                   ForSyDe.Shallow.SynchronousLib,
                   ForSyDe.Shallow.DomainInterfaces,
                   ForSyDe.Shallow.SynchronousProcessLib,
                   ForSyDe.Shallow.FIR,
                   ForSyDe.Shallow.UntimedLib,
                   ForSyDe.Shallow.FilterLib,
                   ForSyDe.Shallow.UtilityLib,
                   ForSyDe.Shallow.Gaussian,
                   ForSyDe.Shallow.Vector,
                   ForSyDe.Shallow.Memory

 
  other-modules:   Paths_ForSyDe,
                   Language.Haskell.TH.TypeLib,
                   Data.Typeable.TypeRepLib,
                   Data.Traversable.GenericZipWith,
                   ForSyDe.Config,
                   ForSyDe.ForSyDeErr,
                   ForSyDe.Netlist,
                   ForSyDe.Netlist.Traverse,
                   ForSyDe.OSharing,
                   ForSyDe.OSharing.UDynamic,
                   ForSyDe.System.SysFun,
                   ForSyDe.System.SysFun.Instances,
                   ForSyDe.System.SysDef,
                   ForSyDe.System.Instantiate,
                   ForSyDe.Process.ProcFun,
                   ForSyDe.Process.ProcVal, 
                   ForSyDe.Process.ProcType,
                   ForSyDe.Process.ProcType.Instances,
                   ForSyDe.Backend.Ppr,
                   ForSyDe.Backend.VHDL.AST,
                   ForSyDe.Backend.VHDL.Ppr,
                   ForSyDe.Backend.VHDL.Constants,
                   ForSyDe.Backend.VHDL.FileIO,
                   ForSyDe.Backend.VHDL.Traverse,
                   ForSyDe.Backend.VHDL.Traverse.VHDLM,
                   ForSyDe.Backend.VHDL.Translate,
                   ForSyDe.Backend.VHDL.Generate,
                   ForSyDe.Backend.VHDL.TestBench,
                   ForSyDe.Backend.VHDL.Quartus,
                   ForSyDe.Backend.VHDL.Modelsim,
                   ForSyDe.Backend.GraphML.AST,
                   ForSyDe.Backend.GraphML.Ppr,
                   ForSyDe.Backend.GraphML.FileIO,
                   ForSyDe.Backend.GraphML.Traverse,
                   ForSyDe.Backend.GraphML.Traverse.GraphMLM
                     


-- FIXME: remove all the -fno-warn*
  ghc-options:	-Wall -fno-warn-name-shadowing -fno-warn-orphans
