name:           forsyde-shallow
version:        3.3.2.0
cabal-version:  >= 1.6
build-type:     Simple
license:        BSD3
license-file:   LICENSE
author:         ForSyDe Group, KTH/EECS/ES
copyright:      Copyright (c) 2003-2018 ForSyDe Group, KTH/EECS/ES
maintainer:     ForSyDe Group <forsyde-dev@eecs.kth.se>
homepage:       http://forsyde.ict.kth.se/
stability:      alpha
synopsis:       
 ForSyDe's Haskell-embedded Domain Specific Language.
description: 
 The ForSyDe (Formal System Design) methodology has been developed with the objective to move system design to a higher level of abstraction and to bridge the abstraction gap by transformational design refinement. 
 .
 This library provides a shallow implementation of ForSyDe as a Haskell-embedded Domain Specific Language (DSL). For more information, please see ForSyDe's website: <http://forsyde.ict.kth.se/>.
 .
 This package is a spin-off of the <https://hackage.haskell.org/package/ForSyDe ForSyDe> project and it follows its versioning. 
category:       Language
tested-with:    GHC==8.0.2

-- In order to include all this files with sdist
extra-source-files: LICENSE,
                    README,
                    INSTALL,
                    examples/Equalizer_Shallow/README,
                    examples/Equalizer_Shallow/AudioAnalyzer.lhs,
                    examples/Equalizer_Shallow/AudioFilter.lhs,
                    examples/Equalizer_Shallow/ButtonControl.lhs,
                    examples/Equalizer_Shallow/DistortionControl.lhs,
                    examples/Equalizer_Shallow/Equalizer.lhs,
                    examples/Equalizer_Shallow/EqualizerTypes.lhs,
                    examples/Equalizer_Shallow/Test/AudioIn.mat,
                    examples/Equalizer_Shallow/TestAnalyzer.lhs,
                    examples/Equalizer_Shallow/TestButtonControl.lhs,
                    examples/Equalizer_Shallow/TestDFT.lhs,
                    examples/Equalizer_Shallow/TestDistortionControl.lhs,
                    examples/Equalizer_Shallow/TestEqualizer.lhs,
                    examples/Equalizer_Shallow/TestFilter.lhs,
                    examples/Equalizer_Shallow/TestFIR.lhs


source-repository head
  type:     git
  location: git://github.com/forsyde/forsyde-shallow

Library
  build-depends:   base>=4 && <6,
                   directory,
                   old-time,
                   process,
                   random


  hs-source-dirs:  src
  exposed-modules: ForSyDe.Shallow
                 , ForSyDe.Shallow.Core
                 , ForSyDe.Shallow.Core.Signal
                 , ForSyDe.Shallow.Core.Vector
                 , ForSyDe.Shallow.Core.AbsentExt
                 , ForSyDe.Shallow.Core.BitVector
                 , ForSyDe.Shallow.MoC
                 , ForSyDe.Shallow.MoC.CT
                 , ForSyDe.Shallow.MoC.Synchronous
                 , ForSyDe.Shallow.MoC.Synchronous.Process
                 , ForSyDe.Shallow.MoC.Synchronous.Stochastic
                 , ForSyDe.Shallow.MoC.Untimed
                 , ForSyDe.Shallow.MoC.Dataflow
                 , ForSyDe.Shallow.MoC.SDF
                 , ForSyDe.Shallow.MoC.DomainInterface
                 , ForSyDe.Shallow.MoC.MoCInterface
                 , ForSyDe.Shallow.AdaptivityLib
                 , ForSyDe.Shallow.PolyArith
                 , ForSyDe.Shallow.Queue
                 , ForSyDe.Shallow.DFT
                 , ForSyDe.Shallow.FIR
                 , ForSyDe.Shallow.FilterLib
                 , ForSyDe.Shallow.UtilityLib
                 , ForSyDe.Shallow.Gaussian
                 , ForSyDe.Shallow.Memory

  ghc-options:	-Wall -fno-warn-name-shadowing